# quantum-coin

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  wrapper.h
docs/: api.md  cryptography.md  git.md
include/sphincs/: params.h
src/: main.rs  rest.rs
src/blockchain/: block.rs  chain.rs  mod.rs  state.rs
src/consensus/: mod.rs  pouw.rs
src/cryptography/: kyber.rs  mod.rs  sphincs.rs
src/dapps/: mod.rs  smart_contract.rs
src/network/: mod.rs  p2p.rs
src/storage/: database.rs
src/transactions/: tx_pool.rs
src/wallet/: mod.rs  wallet.rs
tests/: blockchain_tests.rs  consensus_tests.rs
