[package]
name = "quantumcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }   # For async runtime
serde = { version = "1.0", features = ["derive"] } # Serialization
sha3 = "0.10"                                      # Quantum-safe hashing
pqcrypto = "0.18.1"                                # Post-quantum cryptography
rocksdb = "0.23.0"                                 # Database for blockchain storage
log = "0.4"                                        # Logging system
clap = { version = "4.0", features = ["derive"] }  # CLI argument parsing
