[package]
name = "quantumcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
pqcrypto-kyber = "0.8.1" # Latest compatible version
pqcrypto-traits = "0.3.5"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
rocksdb = "0.23.0"
sha3 = "0.10"
log = "0.4"

