[package]
name = "quantumcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
rocksdb = "0.23.0"
sha3 = "0.10"
log = "0.4"
hex = "0.4.0"

# Post-quantum crypto dependencies
pqcrypto-traits = "0.3.5"
pqcrypto-kyber = "0.8.1"
pqcrypto-sphincsplus = "0.7.0"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.10"